--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 body{
     margin:0;
     font-family: 'Roboto', sans-serif;
+    background-color: #FA6600;
 }
 .menu{
     display: flex;
     justify-content: center;
 }
 .menu{
-    background-color: orange;
+    background-color: #612701;
     justify-content: space-between;
     color:white;
     font-size: 18px;
@@ -32,14 +33,41 @@ body{
     color:red;
     font-size: 19px;
 }
+.conteudo{
+    padding: 30px;
+}
 .conteudo aside{
+    background-color: white;
+    width: 100%;
+    border-radius: 2px;
+}
+.conteudo aside .film{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.conteudo aside .film [class^="film-"]{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
+    width: 33%;
+    height: auto;
+    
 }
-.conteudo aside div figure{
+.conteudo aside .film [class^="film-"] figure{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    height: auto;
+    width: 245px;
+    background-color: green;
+}
+footer{
+    background-color: black;
+    height: 100px;
+    display: flex;
     justify-content: center;
+    align-items: center;
+}
+footer h3{
+    color: white;
 }
