--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@
 body{
     margin:0;
     font-family: 'Roboto', sans-serif;
-    background-image: url("../assets/img/background.jpg");
-    background-repeat: no-repeat;
-    backdrop-filter: blur(40px);
+    background-image: url("../assets/img/wallpaper.jpg");
+    background-repeat: repeat;
+    backdrop-filter: blur(30px);
     color: white;
 }
 
@@ -13,6 +13,43 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.inicio header {
+    background-color: rgba(0, 0, 0, 0.445);
+    border-radius: 10px;
+    box-shadow: 7px 5px 5px rgba(0, 0, 0, 0.582);
+    color: rgb(255, 196, 0);
+}
+
+.inicio header button{
+    color: white;
+    background-color: red;
+    border-radius: 8px;
+    border: 0;
+    size: 5%;
+    display: flex;
+    font-size: large;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 90%;
+    height: 50px;
+    margin-top: 5%;
+}
+
+.inicio header button img{
+    width: 35px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.inicio header button b{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.inicio header button:hover{
+    background-color: rgb(255, 196, 0);
+    transition-duration: 300ms;
 }
 
 .menu{
@@ -25,6 +62,13 @@ body{
     color:white;
     font-size: 18px;
 }
+
+.menu img {
+    padding-top: 10%;
+    padding-left: 10%;
+    width: 8vw;
+}
+
 .menu ul{
     display: flex;
     align-items: center;
@@ -42,12 +86,11 @@ body{
     color:white;
 }
 .menu ul li a:hover{
-    color:rgb(255, 234, 210);
-    font-size: 19px;
+    color:rgb(255, 136, 0);
 }
 
 .inicio {
-    height: 94vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     vertical-align: middle;
@@ -59,6 +102,7 @@ body{
 }
 
 .film{
+    background-color: rgba(0, 0, 0, 0.329);
     display: flex;
     height: 100vh;
     vertical-align: middle;
@@ -69,7 +113,7 @@ body{
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 5px;
-    box-shadow: 10px;
+    box-shadow: 7px 5px 5px rgba(0, 0, 0, 0.582);
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 20px;
@@ -86,31 +130,12 @@ body{
     flex-direction: row;
     margin: 0;
 }
-/*
-.film-1{
-    background-color: #b6731c;
-}
 
-.film-2{
-    background-color: #310f5e;
-}
-
-.film-3{
-    background-color: #310f5e;
-}
-
-.film-4{
-    background-color: #310f5e;
-}
-*/
-[class*="film-"]{
-    padding: 30px;
-}
 .film figure img:hover{
-    box-shadow: 0 0 2px 1px rgba(0, 13, 17, 0.5);
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
     transform: scale(1.05);
+    box-shadow: 11px 5px 5px rgba(0, 0, 0, 0.582);
     transition-duration: 1s;
 }
 
@@ -123,6 +148,7 @@ body{
     padding-left: 10vw;
     padding-right: 10vw;
     z-index: 1;
+    text-shadow: 5px;
 }
 .conteudo aside h2{
     font-family: 'Courier New', Courier, monospace;
