--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .inicio,.film{
-    background-image:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(249,5,243,0.9752275910364145) 51%, rgba(0,212,255,1) 100%);
+    background-image:linear-gradient(-90deg, rgba(2,0,36,1) 0%, rgb(255, 2, 251) 51%, rgb(1, 75, 89) 100%);
     background-repeat: repeat;
 }
 .inicio{
